<resources>
    <string name="app_name">WebViewAndAuth</string>
    <string name="google">Google</string>
    <string name="youtube">YouTube</string>
    <string name="stackoverflow">StackOverFlow</string>
    <string name="github">Github</string>
    <string name="ListWeb">Site List</string>
    <string name="input_password">Input Password</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="input_email">Input Email</string>
    <string name="registration">Registration</string>
    <string name="logout">Logout</string>
    <string name="logoutNavView">Logout</string>
    <string name="without_login">Without login</string>
</resources>