<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <item android:title="@string/ListWeb" android:icon="@color/black">
        <menu>
            <item android:title="@string/google" android:id="@+id/google" android:icon="@drawable/ic_baseline_search_24"/>
            <item android:title="@string/youtube" android:id="@+id/youtube" android:icon="@drawable/ic_baseline_play_circle_filled_24"/>
            <item android:title="@string/stackoverflow" android:id="@+id/stackoverflow" android:icon="@drawable/ic_baseline_manage_search_24"/>
            <item android:title="@string/github" android:id="@+id/github" android:icon="@drawable/ic_baseline_document_scanner_24"/>
        </menu>
    </item>
</menu>